# skaScreen

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE.txt  README.md  main.cpp  test_data_fetch.cpp
src/: setting.h  skaScreen.cpp  skaScreen.h
src/core/data/: data.cpp  data.hpp
src/core/data/data_fetch/: data_fetch.cpp  data_fetch.hpp  example_usage.cpp  realtime_example.cpp
src/pages/home/: SystemChartWidget.cpp  SystemChartWidget.h  home.cpp  home.h  home.ui  home.ui.bkup
src/res/: res.qrc
src/utils/: blur.h  img.h
